# sensorcube

./: README.md  config.json
arduino/libraries/STM32duino_VL53L3CX/src/: vl53lx_def.h
arduino/sensorcube/: sensorcube.ino
cad/3dprint/: BoardStand.stl  CubeStructure.stl
cad/lasercut/: Back.dxf  Front.dxf  Left.dxf  Top.dxf
data/: imu_raw_kvh1750_static.json  imu_raw_phidgets_static.json  imu_raw_sensorcube_static.json
doc/ublox_configuration/: sensorcube_ublox_m8t.txt
examples/cpp/: CMakeLists.txt
examples/cpp/src/: printSerialData.cpp  processIMU.cpp  serializeHeartbeat.cpp  showCamera.cpp
examples/python/: .gitignore  blobDetector.py  cameraCapture.py  config.json  printSerialData.py  processIMU.py  serializeHearbeat.py  showCamera.py
tools/: calibrateCamera.py  captureCamera.py  fftIMU.py  plotIMU.py  recordGNSS.py  recordMessages.py  setTime.py  showIMU.py
udev/: 99-sensorcube.rules
